--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "@mexican-man/pages-csp-generator",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "The goal of this package is to provide a simple automated way to generate Content Security Policy compliant headers for your Cloudflare Pages site at runtime. The primary goal is to automate hashing and nonces, but it will also scan your page to include anything else included in stylesheets, etc.",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "typings": "./dist/index.js",
   "scripts": {
-    "build": "tsc --build"
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
-    "url": "github.com/Mexican-Man/pages-csp-generator"
+    "url": "https://github.com/Mexican-Man/pages-csp-generator"
   },
   "author": "Cole Crouter",
   "license": "ISC",
   "dependencies": {
     "@cloudflare/workers-types": "^3.5.1",
+    "@open-wc/building-rollup": "^2.0.1",
+    "@rollup/plugin-typescript": "^8.3.2",
+    "@types/web-app-manifest": "^1.0.2",
+    "rollup": "^2.72.0",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-dts": "^4.2.1",
+    "rollup-plugin-esbuild": "^4.9.1",
     "typescript": "^4.6.3"
   },
   "keywords": [
